--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.0.3",
+    "@reduxjs/toolkit": "^2.2.3",
     "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
