--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.3",
     "@vis.gl/react-google-maps": "^1.0.0",
+    "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "flowbite-react": "^0.9.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
