--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@vis.gl/react-google-maps": "^1.0.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
+    "firebase": "^10.12.0",
     "flowbite-react": "^0.9.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-leaflet": "^4.2.1",
