--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.12.0",
     "flowbite-react": "^0.9.0",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
