--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@clerk/clerk-react": "^5.0.3",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.3",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
     "@vis.gl/react-google-maps": "^1.0.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
