--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
