--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.12.0",
     "flowbite-react": "^0.9.0",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -31,6 +32,7 @@
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
