--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
