--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.3",
     "firebase": "^10.12.0",
     "flowbite-react": "^0.9.0",
+    "formik": "^2.4.6",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
@@ -38,7 +39,8 @@
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
